Fixed: wflow-consoleweb - Form/List/Userview Builder - Button tooltips are truncated. @5.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/fbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/fbuilder.css
@@ -112,7 +112,6 @@
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    overflow: hidden;
 }
 .form-palette-options button span{
     width:0px;
